--- a/src/main/webapp/resource/css/local.css
+++ b/src/main/webapp/resource/css/local.css
@@ -1,67 +1,67 @@
-    .inner-bg{
+.inner-bg{
     padding: 100px 0 0 0;
-    }
-    .bk{
-        width: 100%;
-        height: 100%;
-        background-image: url(../img/background.jpg);
-        background-repeat: no-repeat;
-        background-size:100% 100%;
-        position: absolute;
-        opacity: 0.6;
-    }
-    .top-content .text{
-        color:#000;
-        font-family:"微软雅黑";
-    }
-    .top-content .discription p{
-        font-family: "微软雅黑";
-        opacity: 0.8;
-        font-size: 15px;
-        padding-top:20px ;
-    }
-    .form-box{
-        margin-top: 35px;
-    }
-    .form-top{
-        padding: 15px 25px 15px 25px;
-        background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.7) 100%);
-        -moz-border-radius: 15px 15px 0 0;
-        -webkit-border-radius: 15px 15px 0 0;
-        border-radius: 15px 15px 0 0;
-        text-align: center;
-        line-height: 30px;
-        font-family: "微软雅黑";
-    }
-    .form-bottom{
-        padding: 5px 25px 15px 25px;
-        background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.8) 70%, rgba(255, 255, 255, 0.1) 100%);
-        -moz-border-radius:0 0 15px 15px ;
-        -webkit-border-radius:0 0 15px 15px ;
-        border-radius: 0 0 15px 15px ;
-        text-align: center;
-        line-height: 30px;
-        font-family: "微软雅黑";
-    }
-    .password-holder{
-        padding: 6px 18px 6px 20px;
-    }
-    .submit-holder{
-        margin-top: 10px;
-    }
-    .linewidthholder{
-        margin: 10px 0 10px 0;
-    }
-    .footfont{
-        height: 30px;
-        line-height: 30px;
-        background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, rgba(255, 255, 255, 0.6) 100%);
-        font-family: "微软雅黑";
-        color:#009999;
-        text-align: center;
-        letter-spacing: 1px;
-        font-size: 15px;
-    }
-    .errormessage{
-        height: 32px;padding-top: 0px;padding-bottom: 0px;margin-bottom: 0px;
-    }
+}
+.bk{
+    width: 100%;
+    height: 100%;
+    background-image: url(resource/img/background.jpg);
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+    position: absolute;
+    opacity: 0.6;
+}
+.top-content .text{
+    color:#000;
+    font-family:"微软雅黑";
+}
+.top-content .discription p{
+    font-family: "微软雅黑";
+    opacity: 0.8;
+    font-size: 15px;
+    padding-top:20px ;
+}
+.form-box{
+    margin-top: 35px;
+}
+.form-top{
+    padding: 15px 25px 15px 25px;
+    background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.7) 100%);
+    -moz-border-radius: 15px 15px 0 0;
+    -webkit-border-radius: 15px 15px 0 0;
+    border-radius: 15px 15px 0 0;
+    text-align: center;
+    line-height: 30px;
+    font-family: "微软雅黑";
+}
+.form-bottom{
+    padding: 5px 25px 15px 25px;
+    background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.8) 70%, rgba(255, 255, 255, 0.1) 100%);
+    -moz-border-radius:0 0 15px 15px ;
+    -webkit-border-radius:0 0 15px 15px ;
+    border-radius: 0 0 15px 15px ;
+    text-align: center;
+    line-height: 30px;
+    font-family: "微软雅黑";
+}
+.password-holder{
+    padding: 6px 18px 6px 20px;
+}
+.submit-holder{
+    margin-top: 10px;
+}
+.linewidthholder{
+    margin: 10px 0 10px 0;
+}
+.footfont{
+    height: 30px;
+    line-height: 30px;
+    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, rgba(255, 255, 255, 0.6) 100%);
+    font-family: "微软雅黑";
+    color:#009999;
+    text-align: center;
+    letter-spacing: 1px;
+    font-size: 15px;
+}
+.errormessage{
+    height: 32px;padding-top: 0px;padding-bottom: 0px;margin-bottom: 0px;
+}
