--- a/src/main/webapp/resource/css/local.css
+++ b/src/main/webapp/resource/css/local.css
@@ -4,7 +4,7 @@
 .bk{
     width: 100%;
     height: 100%;
-    background-image: url(resource/img/background.jpg);
+    background-image: url(../img/background.jpg);
     background-repeat: no-repeat;
     background-size:100% 100%;
     position: absolute;
